force-app/main/default/objects/Setting__c/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <label>Expression</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>