force-app/main/default/objects/Setting__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>JobId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>