force-app/main/default/objects/Setting__c/fields/SetDate__c.field-meta.xml
<CustomField>
    <fullName>SetDate__c</fullName>
    <label>SetDate</label>
    <type>DateTime</type>
</CustomField>