force-app/main/default/objects/Setting__c/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <label>Weekday</label>
    <length>3</length>
    <type>Text</type>
</CustomField>