force-app/main/default/objects/Setting__c/validationRules/Valid_CRON.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_CRON</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(Expression__c, &quot;((0) ([0-5]*[0-9]) ([0-1]*[0-9]) (\\?) (\\*) ([A-Z]{3}) (\\*))+&quot;)</errorConditionFormula>
    <errorDisplayField>Expression__c</errorDisplayField>
    <errorMessage>Invalid CRON expression submitted</errorMessage>
</ValidationRule>